--- a/beamer.tex
+++ b/beamer.tex
@@ -28,6 +28,10 @@ $endfor$
 \usepackage{graphicx}
 \usepackage{xcolor}
 
+$if(fontspec)$
+\usepackage{fontspec}
+$endif$
+
 $if(phiso)$
 \usepackage{phiso}
 $else$
