fix(beamer-metro): fix Fira Math option

--- a/beamer-metropolis.tex
+++ b/beamer-metropolis.tex
@@ -58,7 +58,7 @@ $if(firamath)$
 \setmainfont{FiraGO}[Scale = 1.0]
 \setsansfont{FiraGO}
 \setmathfont{Fira Math}
-$endif(firamath)$
+$endif$
 $if(pfgplots)$
 \pgfplotsset{
   every axis/.append style={mlineplot},
